attempt to fix spacing by unediting index css

--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,8 @@ h1 {
 }
 
 button {
-  border-radius: 0px;
-  border: 1px solid ;
-  border-color: #000000;
+  border-radius: 8px;
+  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -48,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #09bc21;
+  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
@@ -66,7 +65,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
-.square{
-  background-color: ;
 }
